--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											<span class="image"><img src="./images/lashdaddies.gif" alt="" style="height:200px; width:200px;" /></span>
 										<h3>Lashdaddies</h3>
 										<p>An interactive website created for an Eyelash Extensions business! Assists new clients with the full knowledge of the menu before taking their next step in the beauty world!</p>
-										<a href="www.lashdaddies.com" class="button">Explore!</a>
+										<a href="https://lashdaddies.com/" class="button">Explore!</a>
 									</li>
 									<li>
 											<span class="image"><img src="./images/tictacCover.png" alt="" style="height:200px; width:200px;" /></span>
