--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<ul>
 							<li><a href="#intro" class="active">About me</a></li>
 							<li><a href="#first">Work</a></li>
-							<li><a href="#second">Experience</a></li>
+							<li><a href="#second">Contribution</a></li>
 							<li><a href="#cta">Contact</a></li>
 						</ul>
 					</nav>
@@ -101,10 +101,10 @@
 										<a href="https://lashdaddies.com/" class="button">Explore!</a>
 									</li>
 									<li>
-											<span class="image"><img src="./images/tictacCover.png" alt="" style="height:200px; width:200px;" /></span>
+											<span class="image"><img src="./images/atYourServiceCover.png" alt="" style="height:200px; width:200px;" /></span>
 										<h3>At Your Service!</h3>
 										<p>Need a custom product or service from a small/personal business but don't know where to find one? Your solution is here. A handy app to help expedite your search for the perfect provider!   </p>
-										<a href="https://tictac-65008.firebaseapp.com/" class="button"> Learn More</a>
+										<a href="#" class="button"> Learn More</a>
 									</li>
 								</ul>
 								<footer class="major">
