--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 												<li>Angular 8</li>
 												<li>Express</li>
 												<li>Node.js</li>
-												<li>Java</li>
-												<li>Springboot</li>
+												<li>Typescript</li>
+												<li>HTML5 / CSS</li>
 											</ul>
 											</div>
 											<div style="display:inline-block; width:50px;"></div>
